--- a/libft/Makefile
+++ b/libft/Makefile
@@ -34,6 +34,8 @@ SRCS = ft_atoi.c\
 			ft_putstr_fd.c\
 			ft_putendl_fd.c\
 			ft_putnbr_fd.c\
+			ft_strcmp.c\
+			ft_strcpy.c\
 			ft_lstnew.c\
 			ft_lstadd_front.c\
 			ft_lstsize.c\
